--- a/rosgroundcontrol.ui
+++ b/rosgroundcontrol.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>680</width>
-    <height>477</height>
+    <width>883</width>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -108,8 +108,8 @@
    <widget class="QPushButton" name="upCommand">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>190</y>
+      <x>740</x>
+      <y>110</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -121,8 +121,8 @@
    <widget class="QPushButton" name="rightCommand">
     <property name="geometry">
      <rect>
-      <x>580</x>
-      <y>240</y>
+      <x>800</x>
+      <y>160</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -134,8 +134,8 @@
    <widget class="QPushButton" name="leftCommand">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>240</y>
+      <x>680</x>
+      <y>160</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -147,8 +147,8 @@
    <widget class="QPushButton" name="downCommand">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>290</y>
+      <x>740</x>
+      <y>210</y>
       <width>61</width>
       <height>51</height>
      </rect>
@@ -167,13 +167,23 @@
      </rect>
     </property>
    </widget>
+   <widget class="QOpenGLWidget" name="openGLWidget">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>110</y>
+      <width>640</width>
+      <height>480</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>680</width>
+     <width>883</width>
      <height>24</height>
     </rect>
    </property>
