New Thread for Serial Update

--- a/rosgroundcontrol.ui
+++ b/rosgroundcontrol.ui
@@ -177,6 +177,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QLabel" name="laserMeasurement">
+    <property name="geometry">
+     <rect>
+      <x>680</x>
+      <y>330</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Measurement:</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
