--- a/rosgroundcontrol.ui
+++ b/rosgroundcontrol.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1013</width>
-    <height>716</height>
+    <width>800</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,8 +56,8 @@
    <widget class="QPushButton" name="stopButton">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>10</y>
+      <x>840</x>
+      <y>300</y>
       <width>101</width>
       <height>71</height>
      </rect>
@@ -108,10 +108,10 @@
    <widget class="QPushButton" name="upCommand">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>60</y>
-      <width>61</width>
-      <height>51</height>
+      <x>650</x>
+      <y>10</y>
+      <width>71</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -121,10 +121,10 @@
    <widget class="QPushButton" name="rightCommand">
     <property name="geometry">
      <rect>
-      <x>850</x>
-      <y>110</y>
-      <width>61</width>
-      <height>51</height>
+      <x>720</x>
+      <y>70</y>
+      <width>71</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -134,10 +134,10 @@
    <widget class="QPushButton" name="leftCommand">
     <property name="geometry">
      <rect>
-      <x>730</x>
-      <y>110</y>
-      <width>61</width>
-      <height>51</height>
+      <x>650</x>
+      <y>70</y>
+      <width>71</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -147,31 +147,21 @@
    <widget class="QPushButton" name="downCommand">
     <property name="geometry">
      <rect>
-      <x>790</x>
-      <y>160</y>
-      <width>61</width>
-      <height>51</height>
+      <x>720</x>
+      <y>10</y>
+      <width>71</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
      <string>v</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="outputTextBox">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>271</width>
-      <height>71</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QOpenGLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>160</y>
+      <x>0</x>
+      <y>0</y>
       <width>640</width>
       <height>480</height>
      </rect>
@@ -180,27 +170,40 @@
    <widget class="QLabel" name="laserMeasurement">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>110</y>
-      <width>201</width>
-      <height>21</height>
+      <x>650</x>
+      <y>270</y>
+      <width>121</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
-     <string>Measurement:</string>
+     <string>Dist:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="sensorTrigger">
     <property name="geometry">
      <rect>
-      <x>660</x>
-      <y>290</y>
-      <width>341</width>
+      <x>650</x>
+      <y>140</y>
+      <width>141</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Sensor Btn</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>200</y>
+      <width>141</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Close Plot</string>
     </property>
    </widget>
   </widget>
@@ -209,7 +212,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1013</width>
+     <width>800</width>
      <height>24</height>
     </rect>
    </property>
